src/tess/tl/test/fail/test_fail_unknown_type_param.tl
// Unknown type name in a function parameter should be rejected.
#module main
identity(x: Quux) -> Int  { x            }
main    ()        -> CInt { identity(42) }
